[gd_scene load_steps=16 format=3 uid="uid://dddwyb54rdty"]

[ext_resource type="Script" uid="uid://cheb8vbtyuyor" path="res://Menus/PausedMenu/paused_menu.gd" id="1_yr1f7"]
[ext_resource type="Texture2D" uid="uid://b2kelxd6toktp" path="res://Assets/input-prompts/Keyboard & Mouse/Default/keyboard_arrows_vertical.png" id="2_a5x6o"]
[ext_resource type="FontFile" uid="uid://bftmjwmvbmgcm" path="res://Assets/Fonts/Magedov_Military.ttf" id="3_vma1o"]
[ext_resource type="Texture2D" uid="uid://ca8f02maausa" path="res://Assets/input-prompts/Keyboard & Mouse/Default/keyboard_return.png" id="4_kyxvy"]
[ext_resource type="Texture2D" uid="uid://cwt48ujqk6udm" path="res://Assets/BrianSprites/UI/fondoboton.png" id="5_vfw75"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vfw75"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8w0lf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahbm4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d80se"]

[sub_resource type="Animation" id="Animation_d3ujx"]
resource_name = "RESET_BLACK"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d80se"]
resource_name = "RESET_WHITE"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.25098, 0.25098, 0.25098, 0.509804)]
}

[sub_resource type="Animation" id="Animation_i4nq3"]
resource_name = "car_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xdhg5"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hqcrq"]
resource_name = "fade_out_to_menu"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d3ujx"]
_data = {
&"RESET_BLACK": SubResource("Animation_d3ujx"),
&"RESET_WHITE": SubResource("Animation_d80se"),
&"fade_in": SubResource("Animation_i4nq3"),
&"fade_out": SubResource("Animation_xdhg5"),
&"fade_out_to_menu": SubResource("Animation_hqcrq")
}

[node name="PausedMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yr1f7")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Node2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.509804)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundMenu" type="ColorRect" parent="CanvasLayer/Control/CenterContainer"]
custom_minimum_size = Vector2(1000, 700)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.875781
anchor_top = 0.895833
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
color = Color(0.172549, 0.141176, 0.0784314, 1)

[node name="GridContainer2" type="GridContainer" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer/GridContainer2/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_a5x6o")
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer/GridContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 20
text = "SELECT_OPTION"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer/GridContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("4_kyxvy")
expand_mode = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control/CenterContainer/BackgroundMenu/MarginContainer/CenterContainer/GridContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 20
text = "CONFIRM_OPTION"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MenuContainer" type="GridContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2
theme_override_constants/v_separation = 40

[node name="MenuTitle" type="Label" parent="CanvasLayer/Control/CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 60
text = "GAME_PAUSED"
horizontal_alignment = 1

[node name="ButtonsContainer" type="GridContainer" parent="CanvasLayer/Control/CenterContainer/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeGame" type="Button" parent="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("5_vfw75")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vfw75")
text = "RESUME_GAME"
flat = true
icon_alignment = 1

[node name="OptionsMenu" type="Button" parent="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("5_vfw75")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8w0lf")
text = "OPTIONS"
flat = true
icon_alignment = 1

[node name="BackToMainMenu" type="Button" parent="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("5_vfw75")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ahbm4")
text = "BACK_TO_MAIN_MENU"
flat = true
icon_alignment = 1

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_vma1o")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("5_vfw75")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d80se")
text = "QUIT"
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_d3ujx")
}

[connection signal="focus_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/ResumeGame" to="." method="_on_resume_game_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/ResumeGame" to="." method="_on_resume_game_focus_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/ResumeGame" to="." method="_on_resume_game_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/ResumeGame" to="." method="_on_resume_game_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/OptionsMenu" to="." method="_on_options_menu_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/OptionsMenu" to="." method="_on_options_menu_focus_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/OptionsMenu" to="." method="_on_options_menu_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/OptionsMenu" to="." method="_on_options_menu_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_focus_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
